fix overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,15 @@
-html {
-	margin: 0;
-	padding: 0;
+html { 
+	height:100%; 
 	background: green;
-
+	overflow: hidden;
 }
 
-body {
-	margin: 1px;
-	padding: 0;
+body { 
+	position: absolute; 
+	top: 0; 
+	bottom: 0; 
+	right: 0; 
+	left: 0; 
 }
 
 #login-section {
@@ -26,7 +28,7 @@ body {
 
 #logout-section {
 	position: relative;
-	width: 100vw;
+	width: 100%;
 	height: 4vh;
 	padding: 1vh;
 	text-align: right;
@@ -35,7 +37,7 @@ body {
 
 #game-section {
 	position: relative;
-	width: 100vw;
-	height: 95vh;
+	width: 100%;
+	height: 100%;
 	padding: 0;
 	margin: 0;
